// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`G-code snapshot — carvera_3axis.hbs > carvera 3-axis dialect 1`] = `
"; Makera Carvera — 3-Axis G-code
; Machine: Makera Carvera — carvera-3ax
; Operation: Snapshot Carvera 3-Axis
; ---------------------------------------------------------------------------
; SAFETY CHECKLIST:
; [1] Workpiece securely clamped to table
; [2] Correct tool loaded in ATC slot (T1–T6)
; [3] Work coordinate system (WCS) zeroed — use G10 L20 P1 or controller UI
; [4] Air-cut first: spindle off, Z raised, 10% feed override
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Carvera firmware docs
; before running on the machine.
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from Makera CAM.
; See docs/MACHINES.md — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; ATC: Carvera 6-slot auto tool changer (T1–T6). T0 = probe, T-1 = no tool.
; After M6, the machine automatically probes tool length.
; G43 H(tool#) applies tool length compensation.
; G49 cancels tool length compensation at program end.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; Spindle range: 6000–15000 RPM
; ---------------------------------------------------------------------------
G21              ; millimeters
G90              ; absolute positioning
G17              ; XY plane
; --- Tool change (ATC) ---
; Verify tool number matches the slot loaded in the Carvera ATC.
M6 T1            ; select tool 1 and execute tool change (auto-probes length)
G43 H1           ; apply tool length compensation for tool 1

; Safe retract and spindle start
G0 Z100 ; safe Z retract
M3 S12000
G4 P2            ; dwell 2s for spindle to reach speed

; --- Toolpath ---
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; --- end toolpath ---

; --- End ---
M5
G49              ; cancel tool length compensation
G0 Z100 ; retract Z
G0 X0 Y0        ; park X Y
M9               ; coolant/vacuum off
M2               ; program end (NOT M30 — M30 may delete file on Smoothieware)
"
`;

exports[`G-code snapshot — carvera_4axis.hbs > carvera 4-axis dialect 1`] = `
"; Makera Carvera — 4-Axis Rotary G-code
; Machine: Makera Carvera 4-Axis — carvera-4ax
; Operation: Snapshot Carvera 4-Axis
; ---------------------------------------------------------------------------
; SAFETY CHECKLIST:
; [1] Rotary attachment secured to table
; [2] Stock centered in chuck, tailstock engaged
; [3] Stock diameter matches CAM setup (Y dimension)
; [4] Z=0 is at stock CENTER (rotation axis), NOT surface
; [5] A=0 set via controller or G28.3 A0
; [6] Air-cut first: spindle off, Z raised, 10% feed override
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Carvera firmware docs
; and your rotary attachment manual before running on the machine.
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from Makera CAM.
; See docs/MACHINES.md — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: continuous (verify against firmware soft limits)
; Spindle range: 6000–15000 RPM
; ---------------------------------------------------------------------------
G21              ; millimeters
G90              ; absolute positioning
G17              ; XY plane
; Safe retract, center on rotary axis, and spindle start
G0 Z100 ; safe Z retract
G0 Y0            ; CRITICAL: center tool on rotation axis (Y must be 0 for 4-axis)
M3 S12000
G4 P2            ; dwell 2s for spindle to reach speed
; --- 4-axis toolpath moves begin (X Y Z A words) ---
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
; --- end toolpath ---
; --- End ---
M5
G0 Z100 ; retract Z
G0 A0            ; return A to zero
G0 X0 Y0        ; park X, re-center Y on rotation axis
M9               ; coolant/vacuum off
M2               ; program end (NOT M30 — M30 may delete file on Smoothieware)
"
`;

exports[`G-code snapshot — cnc_4axis_fanuc.hbs > fanuc_4axis dialect 1`] = `
"(Snapshot Mill — snapshot-mill)
(4-AXIS A-ROTARY G-CODE — FANUC DIALECT)
(---------------------------------------------------------------------------)
(UNVERIFIED G-CODE — VERIFY EVERY LINE AGAINST YOUR FANUC CONTROLLER MANUAL)
(BEFORE RUNNING ON A MACHINE. OUTPUT IS NOT GUARANTEED SAFE FOR ANY MACHINE.)
(---------------------------------------------------------------------------)
(CRITICAL 4TH AXIS CHECKS BEFORE RUNNING:)
(1 — CONFIRM THE ROTARY TABLE OR CHUCK IS FIRMLY CLAMPED TO THE MACHINE TABLE.)
(2 — CONFIRM THE WORKPIECE IS CENTRED ON THE ROTARY AXIS — OFF-CENTRE)
(    STOCK CAUSES GOUGING AND CRASHES.)
(3 — CONFIRM CYLINDER DIAMETER MATCHES THE VALUE USED TO GENERATE TOOLPATHS.)
(4 — SET A-AXIS WCS ZERO — USUALLY THE LEFT FACE OF THE CYLINDER AT A=0 DEG.)
(5 — AIR-CUT WITH SPINDLE OFF AT 10 PCT FEED OVERRIDE BEFORE A REAL CUT.)
(6 — CONFIRM YOUR FANUC CONTROL SUPPORTS A-AXIS COMMANDS AND THAT THE)
(    ROTARY AXIS IS PROPERLY CONFIGURED IN PARAMETERS.)
(---------------------------------------------------------------------------)
(RETRACT ORDER: LIFT Z TO SAFE CLEARANCE BEFORE COMMANDING LARGE A MOVES.)
(BEFORE PRODUCTION: DRY RUN — SPINDLE OFF, Z HIGH, FEED REDUCED.)
(SEE DOCS/MACHINES.MD — SAFE Z, WCS, UNITS, SPINDLE M-CODES.)
(---------------------------------------------------------------------------)
(WORK AREA MM: 200 X 200 X 100)
(A-AXIS RANGE: 360 DEG — VERIFY AGAINST MACHINE TRAVEL LIMITS)
G21              (METRIC — MUST MATCH CONTROLLER SETTING)
G90                    (ABSOLUTE DISTANCE MODE — X Y Z A ALL ABSOLUTE)
G17                    (XY PLANE FOR G2/G3 ARCS)
G40 G49 G80           (CANCEL CUTTER COMP, TOOL LENGTH COMP, CANNED CYCLES)
(OPERATION: Snapshot 4-Axis Fanuc)
(SAFE RETRACT — LIFT Z BEFORE ANY A-AXIS ROTATION TO AVOID COLLISIONS)
G0 Z100
(SPINDLE ON — CONFIRM S VALUE MATCHES YOUR TOOL AND MATERIAL)
M3 S10000
(--- 4-AXIS TOOLPATH MOVES BEGIN — X Y Z A WORDS ---)
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
(--- END TOOLPATH ---)
(SPINDLE OFF)
M5
(SAFE RETRACT AND RETURN TO REFERENCE POSITION)
G91 G28 Z0            (RETURN Z TO REFERENCE POINT — INCREMENTAL MODE)
G91 G28 X0 Y0         (RETURN X Y TO HOME POSITION)
G90                    (RESTORE ABSOLUTE MODE)
G0 A0                 (RETURN A-AXIS TO ZERO)
M30                   (PROGRAM END AND REWIND)
"
`;

exports[`G-code snapshot — cnc_4axis_grbl.hbs > grbl_4axis dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; 4-AXIS (A-ROTARY) G-CODE — grbl_4axis dialect
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Carvera firmware docs
; and your rotary attachment manual before running on the machine.
; ---------------------------------------------------------------------------
; CRITICAL 4TH AXIS CHECKS BEFORE RUNNING:
; (1) Confirm the rotary attachment is firmly clamped to the table.
; (2) Confirm the workpiece is centred on the rotary chuck — off-centre
;     stock causes gouging and crashes.
; (3) Confirm cylinder diameter matches the value used to generate toolpaths.
; (4) Set A-axis WCS zero (usually the left face of the cylinder, A=0°).
; (5) Air-cut with spindle off at 10 % feed override before a real cut.
; (6) Confirm your Carvera firmware supports the A word in Grbl (some builds
;     require the rotary axis plugin — check Makera documentation).
; ---------------------------------------------------------------------------
; Retract order: lift Z to a safe radial clearance before commanding large A moves
; (toolpath lines already use clearance Z between passes; header retract is machine max Z).
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from Makera CAM.
; See docs/MACHINES.md — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: ±360° (verify against firmware soft limits)
G21              ; millimeters — must match Carvera controller settings
G90              ; absolute distance mode (X Y Z A all absolute)
G17              ; XY plane for G2/G3 arcs; 4-axis arcs use XZ with G18 if needed
; Operation: Snapshot 4-Axis GRBL
; Home / safe position — retract Z before rotating A to avoid collisions
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 Y0            ; CRITICAL: center tool on rotation axis (Y must be 0 for 4-axis rotary)
; Spindle on (Grbl — confirm S value matches your bit and material)
M3 S12000
; --- 4-axis toolpath moves begin (X Y Z A words) ---
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
; --- end toolpath ---
; Spindle off
M5
; Retract Z to machine max clearance and park
; (Toolpath already returns A to 0° and retracts Z to clearance;
;  this final retract ensures the tool is at machine-max Z for unload.)
G0 Z100 ; full retract for unload
G0 X0 Y0        ; park X, re-center Y on rotation axis
; M30 or M2 if your Grbl build supports program end (comment out if unsupported)
M30
"
`;

exports[`G-code snapshot — cnc_4axis_heidenhain.hbs > heidenhain_4axis dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; 4-AXIS (A-ROTARY) G-CODE — Heidenhain TNC (DIN/ISO mode)
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Heidenhain TNC manual
; before running on a machine. Output is not guaranteed safe for any machine.
; ---------------------------------------------------------------------------
; CRITICAL 4TH AXIS CHECKS BEFORE RUNNING:
; (1) Switch the TNC to DIN/ISO mode (not Klartext). This program uses
;     standard G-code, not Heidenhain conversational format.
; (2) Confirm the rotary table or chuck is firmly clamped and the A-axis
;     motor is enabled in machine parameters (MP).
; (3) Confirm the workpiece is centred on the rotary axis — off-centre
;     stock causes gouging and crashes.
; (4) Confirm cylinder diameter matches the value used to generate toolpaths.
; (5) Set A-axis datum — use the TNC Datum Setup screen to zero the A axis
;     at your reference position.
; (6) Air-cut with spindle off at 10% feed override before a real cut.
; (7) Confirm your TNC machine parameters for the A-axis are correct:
;     axis limits, acceleration, max RPM. Check MP7420 (axis assignment)
;     and MP1000 (rotary axis configuration).
; ---------------------------------------------------------------------------
; Retract order: lift Z to safe clearance before commanding large A moves.
; Before production: dry run — spindle off, Z high, feed reduced.
; See docs/MACHINES.MD — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: 360 deg — verify against TNC MP axis limits
; --- Safety header ---
G21              ; millimeters — must match TNC setting
G90                    ; absolute distance mode (X Y Z A all absolute)
G17                    ; XY plane for G2/G3 arcs
G40                    ; cancel cutter radius compensation
G49                    ; cancel tool length compensation
G80                    ; cancel canned cycles
; Operation: Snapshot 4-Axis Heidenhain
; --- Tool call (Heidenhain DIN/ISO mode — verify tool in TNC tool table) ---
T1 M6                  ; select tool 1 and execute tool change
G43 H1                 ; apply tool length compensation from TNC tool table
; Home / safe position — retract Z before rotating A to avoid collisions
G0 Z100   ; safe Z retract — adjust to your actual safe clearance
; Spindle on (Heidenhain — confirm S value and M3/M4 match your spindle config)
M3 S10000
; --- 4-axis toolpath moves begin (X Y Z A words) ---
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
; --- end toolpath ---
; Spindle off
M5
; Safe retract and park
G0 Z100   ; full retract for unload
G0 A0                  ; return A-axis to zero
G0 X0 Y0              ; park X Y — adjust to your preferred park position
M30                    ; program end
"
`;

exports[`G-code snapshot — cnc_4axis_linuxcnc.hbs > linuxcnc_4axis dialect 1`] = `
"%
; Snapshot Mill — snapshot-mill
; 4-AXIS (A-ROTARY) G-CODE — linuxcnc_4axis dialect
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your LinuxCNC INI/HAL
; configuration and your rotary attachment manual before running on the machine.
; ---------------------------------------------------------------------------
; CRITICAL 4TH AXIS CHECKS BEFORE RUNNING:
; (1) Confirm the rotary attachment is firmly clamped to the table and the
;     A-axis motor/driver is enabled in your LinuxCNC INI file ([AXIS_A] section).
; (2) Confirm the workpiece is centred on the rotary chuck — off-centre
;     stock causes gouging and crashes.
; (3) Confirm cylinder diameter matches the value used to generate toolpaths.
; (4) Set A-axis WCS zero (usually the left face of the cylinder, A=0).
;     Use LinuxCNC AXIS GUI or GMOCCAPY DRO to zero the A axis at your
;     reference position.
; (5) Air-cut with spindle off at 10% feed override before a real cut.
; (6) Confirm your LinuxCNC INI has [AXIS_A] properly configured:
;     MAX_VELOCITY, MAX_ACCELERATION, MIN_LIMIT, MAX_LIMIT must match
;     your rotary table capabilities and stepper/servo tuning.
; (7) Confirm HOME_SEQUENCE and homing parameters for the A axis are set
;     if your rotary table has a home switch.
; ---------------------------------------------------------------------------
; Retract order: lift Z to a safe radial clearance before commanding large A moves
; (toolpath lines already use clearance Z between passes; header retract is machine max Z).
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from your CAM package.
; See docs/MACHINES.MD — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: +/-360 deg (verify against INI [AXIS_A] MIN_LIMIT / MAX_LIMIT)
; --- Safety header ---
G21              ; millimeters — must match LinuxCNC INI [TRAJ] LINEAR_UNITS = mm
G90              ; absolute distance mode (X Y Z A all absolute)
G17              ; XY plane for G2/G3 arcs; switch to G18 (XZ) if needed for 4-axis arcs
G40              ; cancel cutter radius compensation
G49              ; cancel tool length compensation
G80              ; cancel canned cycles
; Operation: Snapshot 4-Axis LinuxCNC
; --- Tool call (LinuxCNC supports M6 tool change with T-word) ---
; Verify tool number, length offset, and diameter in LinuxCNC tool table.
T1 M6            ; select tool 1 and execute tool change
G43 H1           ; apply tool length compensation from tool table entry 1
; Home / safe position — retract Z before rotating A to avoid collisions
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
; Spindle on (LinuxCNC — confirm S value and M3/M4 match your spindle HAL config)
M3 S12000
; --- 4-axis toolpath moves begin (X Y Z A words) ---
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
; --- end toolpath ---
; Spindle off
M5
; Retract Z to machine max clearance before parking
; (Toolpath already returns A to 0 deg and retracts Z to clearance;
;  this final retract ensures the tool is at machine-max Z for unload.)
G0 Z100 ; full retract for unload
G0 A0            ; return A-axis to zero
G0 X0 Y0         ; park X Y — adjust to your preferred home position
M2               ; program end — LinuxCNC convention (M2 preferred over M30)
%
"
`;

exports[`G-code snapshot — cnc_4axis_mach3.hbs > mach3_4axis dialect 1`] = `
"%
; Snapshot Mill — snapshot-mill
; 4-AXIS (A-ROTARY) G-CODE — mach3_4axis dialect
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Mach3 configuration
; and your rotary attachment manual before running on the machine.
; ---------------------------------------------------------------------------
; CRITICAL 4TH AXIS CHECKS BEFORE RUNNING:
; (1) Confirm the rotary attachment is firmly clamped to the table and the
;     A-axis motor/driver is enabled in Mach3 Config > Motor Tuning.
; (2) Confirm the workpiece is centred on the rotary chuck — off-centre
;     stock causes gouging and crashes.
; (3) Confirm cylinder diameter matches the value used to generate toolpaths.
; (4) Set A-axis WCS zero (usually the left face of the cylinder, A=0).
;     Use Mach3 DRO to zero the A axis at your reference position.
; (5) Air-cut with spindle off at 10% feed override before a real cut.
; (6) Confirm your Mach3 configuration supports the A word (Config > General
;     Config > Rotary axis enabled). Verify steps/degree in Motor Tuning.
; (7) Confirm soft limits for A axis match your rotary table travel.
; ---------------------------------------------------------------------------
; Retract order: lift Z to a safe radial clearance before commanding large A moves
; (toolpath lines already use clearance Z between passes; header retract is machine max Z).
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from your CAM package.
; See docs/MACHINES.md — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: +/-360 deg (verify against Mach3 soft limits)
; --- Safety header ---
G21              ; millimeters — must match Mach3 setup (Config > Native Units)
G90              ; absolute distance mode (X Y Z A all absolute)
G17              ; XY plane for G2/G3 arcs; switch to G18 (XZ) if needed for 4-axis arcs
G40              ; cancel cutter radius compensation
G80              ; cancel canned cycles
; Operation: Snapshot 4-Axis Mach3
; --- Tool call (Mach3 supports M6 tool change) ---
; Verify tool number, length offset, and diameter in Mach3 tool table.
T1 M6            ; select tool 1 and execute tool change
; Home / safe position — retract Z before rotating A to avoid collisions
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
; Spindle on (Mach3 — confirm S value and M3/M4 match your spindle setup)
M3 S12000
; --- 4-axis toolpath moves begin (X Y Z A words) ---
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
; --- end toolpath ---
; Spindle off
M5
; Retract Z to machine max clearance before parking
; (Toolpath already returns A to 0 deg and retracts Z to clearance;
;  this final retract ensures the tool is at machine-max Z for unload.)
G0 Z100 ; full retract for unload
G0 X0 Y0         ; park X Y — adjust to your preferred home position
M30              ; program end — rewinds Mach3 to start
%
"
`;

exports[`G-code snapshot — cnc_4axis_siemens.hbs > siemens_4axis dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; 4-AXIS (A-ROTARY) G-CODE — Siemens Sinumerik dialect
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Sinumerik controller
; documentation and machine data (MD) before running on a machine.
; Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; CRITICAL 4TH AXIS CHECKS BEFORE RUNNING:
; (1) Confirm the rotary table or chuck is firmly clamped to the machine table
;     and the A-axis servo is enabled in machine data.
; (2) Confirm the workpiece is centred on the rotary axis — off-centre
;     stock causes gouging and crashes.
; (3) Confirm cylinder diameter matches the value used to generate toolpaths.
; (4) Set A-axis WCS zero — touch off the A axis at your reference position.
;     Use Sinumerik HMI Work Offset screen to set the A zero.
; (5) Air-cut with spindle off at 10% feed override before a real cut.
; (6) Confirm your Sinumerik machine data has the A-axis properly configured:
;     MD30300 (IS_ROT_AX), MD30310 (ROT_IS_MODULO), MD36100 (POS_LIMIT_PLUS),
;     MD36110 (POS_LIMIT_MINUS) must match your rotary table capabilities.
; (7) Confirm jog, MDI, and reference modes work for the A axis before running
;     this program in AUTO mode.
; ---------------------------------------------------------------------------
; Retract order: lift Z to safe clearance before commanding large A moves.
; Before production: dry run — spindle off, Z high, feed reduced.
; See docs/MACHINES.MD — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: 360 deg — verify against Sinumerik MD soft limits
; --- Safety header ---
G21              ; millimeters — must match Sinumerik setting data SD42010
G90                    ; absolute distance mode (X Y Z A all absolute)
G17                    ; XY plane for G2/G3 arcs
G40                    ; cancel cutter radius compensation
G49                    ; cancel tool length compensation
G80                    ; cancel canned cycles
; Operation: Snapshot 4-Axis Siemens
; --- Tool call (Sinumerik — verify tool number and D correction in tool table) ---
T1 D1                  ; select tool 1, cutting edge 1
M6                     ; execute tool change
; Home / safe position — retract Z before rotating A to avoid collisions
G0 Z100   ; safe Z retract — adjust to your actual safe clearance
; Spindle on (Sinumerik — confirm S value matches your spindle and tool)
M3 S10000
; --- 4-axis toolpath moves begin (X Y Z A words) ---
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
; --- end toolpath ---
; Spindle off
M5
; Safe retract and park
G0 Z100   ; full retract for unload
G0 A0                  ; return A-axis to zero
G0 X0 Y0              ; park X Y — adjust to your preferred park position
M30                    ; program end and rewind
"
`;

exports[`G-code snapshot — cnc_5axis_fanuc.hbs > fanuc 5-axis dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; 5-AXIS SIMULTANEOUS G-CODE — Fanuc dialect
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller manual before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; CRITICAL 5-AXIS CHECKS BEFORE RUNNING:
; (1) Confirm machine kinematic type matches profile (table-table, table-head,
;     or head-head). Wrong kinematics = wrong tool tip position = CRASH.
; (2) Confirm G43.4 (RTCP / TCP) is available and calibrated on your control.
;     Without RTCP, the programmed XYZ point is the rotary center, NOT the
;     tool tip — the tool will gouge or miss the part.
; (3) Confirm A-axis and B-axis travel limits match the profile ranges.
; (4) Confirm tool length compensation (H value) is correct — G43.4 uses it.
; (5) Air-cut with spindle off at 10% feed override before any real cut.
; (6) Watch for singularities near A=0/B=0 (gimbal lock region) — feed may
;     spike. Reduce override near vertical orientations.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: 360°
; B-axis range: 120°
; Kinematic chain: table-head
; Max tilt from vertical: 60°
G21        ; G21=mm / G20=inch — must match controller defaults
G90              ; absolute distance mode (X Y Z A B all absolute)
G17              ; XY plane for arcs
G40 G49 G80     ; cancel cutter comp, tool length comp, canned cycles
; Operation: Snapshot 5-Axis Fanuc
; --- RTCP (Rotary Tool Center Point) ---
; G43.4 tells the control to keep the tool tip at programmed XYZ regardless
; of A/B rotation. Remove this line ONLY if your post-processor already
; accounts for kinematic offsets in the XYZ coordinates.
G43.4 H1        ; RTCP on — verify H number matches your tool offset
; Spindle on
M3 S10000
; --- 5-axis toolpath moves begin (X Y Z A B words) ---
G0 X0 Y0 Z30 A0 B0
G1 X10 Y10 Z-1.000 A15 B10 F500
G1 X20 Y10 Z-1.000 A30 B-5 F500
G1 X20 Y20 Z-1.500 A15 B0 F500
G0 Z30 A0 B0
; --- end toolpath ---
; Spindle off
M5
; Cancel RTCP before retracting
G49              ; cancel tool length / RTCP
; Safe retract
G0 Z100
G0 A0 B0         ; return rotary axes to zero
G0 X0 Y0         ; park — adjust to your safe park position
M30
"
`;

exports[`G-code snapshot — cnc_5axis_siemens.hbs > siemens 5-axis dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; 5-AXIS SIMULTANEOUS G-CODE — Siemens Sinumerik dialect
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller manual before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; CRITICAL 5-AXIS CHECKS BEFORE RUNNING:
; (1) Confirm machine data (MD) for kinematic chain matches this profile.
;     TRAORI reads pivot point distances from MD — wrong MD = wrong TCP.
; (2) Confirm TRAORI is licensed and configured ($MC_TRAFO_TYPE_1, etc.).
; (3) Confirm A-axis and B/C-axis travel limits and soft limits.
; (4) Confirm tool length in the tool table (D1) is correct.
; (5) Air-cut with spindle off at 10% feed override before any real cut.
; (6) CYCLE800 (SWIVEL) may be needed before TRAORI if using tilted work
;     planes — this template does not emit CYCLE800.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: 360°
; B-axis range: 120°
; Kinematic chain: table-table
; Max tilt from vertical: 60°
G21        ; G21=mm / G20=inch — must match controller defaults
G90              ; absolute distance mode
G17              ; XY plane for arcs
; Operation: Snapshot 5-Axis Siemens
; --- Activate 5-axis orientation transformation ---
; TRAORI tells Sinumerik to maintain tool tip at programmed XYZ regardless
; of rotary axis positions. This is mandatory for simultaneous 5-axis.
TRAORI(1)        ; activate transformation — number matches your kinematic setup
; Spindle on
M3 S10000
; --- 5-axis toolpath moves begin (X Y Z A B words) ---
G0 X0 Y0 Z30 A0 B0
G1 X10 Y10 Z-1.000 A15 B10 F500
G1 X20 Y10 Z-1.000 A30 B-5 F500
G1 X20 Y20 Z-1.500 A15 B0 F500
G0 Z30 A0 B0
; --- end toolpath ---
; Spindle off
M5
; Deactivate transformation before retracting
TRAFOOF          ; transformation off
; Safe retract
G0 Z100
G0 A0 B0         ; return rotary axes to zero
G0 X0 Y0         ; park — adjust to your safe park position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Fanuc dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Fanuc
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S10000
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > GRBL dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — GRBL
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S12000
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > GRBL dialect with WCS offset 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Active work offset — verify fixture zero matches G54–G59 selection
G56
; Operation: Snapshot WCS — G56
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S12000
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Heidenhain dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Heidenhain
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S10000
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Mach3 dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Mach3
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Siemens dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Siemens
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S10000
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;
